🔒 Sécurité complète + Chat responsive nickel (mobile/desktop) - Socket.io Auth, CSRF, Sanitization, CORS restrictif, MongoDB timeouts, Chat optimisé

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csrf-csrf": "^4.0.3",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -28,6 +31,7 @@
     "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
+    "jsdom": "^28.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "nodemailer": "^7.0.13",
